# PodcastGenerator

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: step1.yaml  step2.yaml
docs/: architecture.md
pipelines/step1/: README.md  pyproject.toml  requirements.txt
pipelines/step1/src/step1/: cache.py  cli.py  config.py  filters.py  main.py  model.py  scoring.py  select.py
pipelines/step1/src/step1/clients/: pubmed.py
pipelines/step2/: README.md  pyproject.toml  requirements.txt
pipelines/step2/src/step2/: analyze.py  fetch_fulltext.py  text_clean.py
scripts/: run_step1.ps1  run_step2.ps1  setup_venv.ps1
src/podcast_generator/: __init__.py  config.py  io_utils.py  llm_utils.py  logging.py
